# translator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
config/: default.yaml
python/: api.py  api_cloud.py  api_factory.py  main.py  requirements-dev.txt  requirements.txt
python/config/: default.yaml  docker.yaml
python/data/output/: a7fc1469_translated.md
python/src/: __init__.py  constants.py
python/src/chunker/: __init__.py  splitter.py
python/src/cleaner/: __init__.py  pipeline.py
python/src/formatter/: renderer.py
python/src/parser/: __init__.py  dispatcher.py  extractor.py
python/src/translator/: cloud_client.py  context.py  ollama_client.py
python/tests/unit/: test_chunker.py  test_cleaner.py  test_formatter.py  test_parser.py  test_translator.py
scripts/: api.spec  build-python.cjs  copy-python.cjs  docker.sh
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/chunker/: __init__.py  splitter.py
src/cleaner/: __init__.py  pipeline.py
src/composables/: useTranslate.ts
src/formatter/: __init__.py
src/parser/: extractor.py
src/translator/: __init__.py  ollama_client.py
src/types/: index.ts
tests/unit/: test_chunker.py  test_cleaner.py  test_formatter.py
