[package]
name = "scholar-translate"
version = "0.3.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
